--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sffoodtrucks",
+  "name": "lemonparty",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/angrobertsh/sffoodtrucks.git"
+    "url": "git+https://github.com/angrobertsh/lemonparty.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/angrobertsh/sffoodtrucks/issues"
+    "url": "https://github.com/angrobertsh/lemonparty/issues"
   },
-  "homepage": "https://github.com/angrobertsh/sffoodtrucks#readme",
+  "homepage": "https://github.com/angrobertsh/lemonparty#readme",
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
