--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ node_modules/
 
 # Ignore application configuration
 /config/application.yml
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
